task: refactor by data encapsulation